<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.liml.csi_week_1.MainActivity"
    android:weightSum="1"
    android:orientation="vertical"
    android:background="@color/abc_primary_text_disable_only_material_light">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="274dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:contentDescription ="@string/suspect_img"
        android:src="@drawable/suspect" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.liml.csi_week_1.MainActivity">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:id="@+id/tv_label" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/namevalue"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:id="@+id/tv_value" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:id="@+id/tv2_label" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gendervalue"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:id="@+id/tv2_value" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:id="@+id/tv3_label" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agevalue"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:id="@+id/tv3_value" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bounty"
                    android:id="@+id/tv4_label" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bountyvalue"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:id="@+id/tv4_value" />
            </TableRow>


        </TableLayout>

    </LinearLayout>